syntax = "proto3";

package ch.ubique.notifyme.sdk.backend.model;

option java_package = "ch.ubique.notifyme.sdk.backend.model";

message UserUploadPayload {
  int32 version = 1;
  repeated UploadVenueInfo venueInfos = 2;
}
message UploadVenueInfo {
  bytes preId = 1;
  bytes timeKey = 2;
  int64 intervalStartMs = 3;
  int64 intervalEndMs = 4;
  bytes notificationKey = 5;
  bool fake = 6;
}
