syntax = "proto3";

package ch.ubique.swisscovid.cn.sdk.backend.model;
option java_package = "ch.ubique.swisscovid.cn.sdk.backend.model.v3";

message ProblematicEventWrapper {
  int32 version = 1;
  repeated ProblematicEvent events = 2;
}
message ProblematicEvent {
  int32 version = 1;
  bytes identity = 2;
  bytes secretKeyForIdentity = 3;
  int64 day = 4;
  bytes encryptedAssociatedData = 5;
  bytes cipherTextNonce = 6;
}